# deltaconv

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  environment.yml  install.sh  setup.py
deltaconv/: __init__.py
deltaconv/cpp/: README.md  core.cpp  sampling.cpp  sampling.h
deltaconv/geometry/: __init__.py  connection.py  fps.py  grad_div.py  grad_div_mls.py  operators.py  utils.py
deltaconv/models/: __init__.py  deltanet_base.py  deltanet_classification.py  deltanet_segmentation.py
deltaconv/nn/: __init__.py  deltaconv.py  mlp.py  nonlin.py
deltaconv/transforms/: __init__.py  geodesic_fps.py  normalize_area.py  normalize_axes.py  normalize_scale.py  random_normals.py  random_rotate.py  random_scale.py  random_translate_global.py  sample_points.py
experiments/: test_shapenet.py  train_modelnet.py  train_scanobjectnn.py  train_shapenet.py  train_shapeseg.py  train_shrec.py  utils.py
experiments/anisotropic_diffusion/: anisotropic_diffusion.ipynb  architectures.py
experiments/datasets/: __init__.py  modelnet.py  scanobjectnn.py  shape_seg.py  shapenet.py  shrec.py
replication_scripts/: README.md  modelnet40.sh  scanobjectnn.sh  shapenet.sh  shapeseg.sh  shrec.sh
replication_scripts/pretrained/: modelnet40.sh  scanobjectnn.sh  shapenet.sh  shapeseg.sh  shrec.sh
test/geometry/: test_connection.py  test_fps.py  test_grad_div.py  test_grad_div_mls.py  test_operators.py  test_utils.py
test/nn/: test_deltaconv.py  test_mlp.py  test_nonlin.py
visualization/: README.md  ply_utils.py  pointcloud_features.blend
